--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,8 @@
 language: cpp
+dist: bionic
 before_script:
 - sudo apt-get install libboost-test-dev -y
-- echo "deb http://archive.ubuntu.com/ubuntu xenial main universe" | sudo tee -a /etc/apt/sources.list
+- echo "deb http://archive.ubuntu.com/ubuntu bionic main universe" | sudo tee -a /etc/apt/sources.list
 - sudo apt-get update -qq
 script:
 - cmake .
