--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ script:
 - cmake --build .
 - cmake --build . --target test
 - cmake --build . --target package
-- mkdir docs
+- mkdir doxygen
 - doxygen Doxyfile
 deploy:
   - provider: pages
